Make sure blog comments don't overflow
For example if people use filenames about a mile long in comments.

--- a/sass/modules/blog/_comments.scss
+++ b/sass/modules/blog/_comments.scss
@@ -25,6 +25,10 @@
     }
 }
 
+.serendipity_commentBody {
+    overflow-x: scroll;
+}
+
 @media screen and (min-width: $md) {
     .commentlevel-1 { margin-left: 1rem; }
     .commentlevel-2 { margin-left: 2rem; }
